--- a/trs_extractor/说明.md
+++ b/trs_extractor/说明.md
@@ -1,12 +1,18 @@
 首先打开游戏的data文件夹，我们会看到这几类文件
 
+![trs_extractor1.png](picture/trs_extractor1.png)
+
 经过我的初步观察，它们应该分别对应：角色、动画、护甲、角色职业、通用活动（通常是cg）、敌人、道具、地图、地图信息、技能、角色状态（debuff，buff）、系统、？、战斗内信息（包含了战斗内对话内容）和武器。
 
 其中比较重要的是CommonEvents，MapXXX（编号，通常会有很多个）和Troops文件，分别包含了cg文本，各个地图内的剧情文本和战斗内文本。
 
 随意打开一个文件，我们会看到这种玩意
 
+![trs_extractor2.png](picture/trs_extractor2.png)
+
 很难从中提取到任何信息，但它是一个json文件，只需要简单整理一下就能从中提取出剧情文本。整理之后，以CommonEvents为例，具有这种格式
+
+![trs_extractor3.png](picture/trs_extractor3.png)
 
 如果用python来读取这个文件的话，那么他就是一个list内包含在多个dict的数据形式。其中"parameters"包含了包括文本数据在内的很多数据。那么我们就可以利用除文本数据以外的所有数据作为索引，去找到新版游戏中对应这句译文的原文，然后将它替换成已知的原文。
 
