--- a/trs_extractor/说明.md
+++ b/trs_extractor/说明.md
@@ -1,3 +1,14 @@
+先叠个甲：本人没有学习过任何游戏引擎相关知识，通过拆包可能有更方便的实现方法。
+
+相信各位一定遇到过这种情况，某个汉化游戏的版本要旧于此游戏的最新版本，而由于某种原因，你没有办法入手最新的汉化版本。并且由于汉化文本是内嵌在游戏中的，没有办法利用mtool来提取出汉化文本，并应用在新版游戏上。
+
+本文章所提出的方法，便是为了解决这种窘境而诞生的。基本思路就是想办法从已汉化的旧版游戏中提取出游戏文本，替换到新版游戏当中，然后利用mtool和untrsfix，将剩余未汉化文本提取，并翻译。不过可惜的是，目前我只找到了适用于一小部分引擎的方法。
+
+这一小部分引擎指的是，游戏文件夹内含有‘data’文件夹，并且data文件夹内全部都是json文件的引擎。具体来说，大概是这几个引擎（我没有一个个对比去看，但我想translator++把它们放在一起，应该就是因为它们是一个类别的吧。）
+
+![trs_extractor0.png](trs_extractor0.png)
+
+#原理及方法
 首先打开游戏的data文件夹，我们会看到这几类文件
 
 ![trs_extractor1.png](trs_extractor1.png)
