--- a/trs_extractor/说明.md
+++ b/trs_extractor/说明.md
@@ -1,3 +1,5 @@
+# trs_extractor
+
 先叠个甲：本人没有学习过任何游戏引擎相关知识，通过拆包可能有更方便的实现方法。
 
 相信各位一定遇到过这种情况，某个汉化游戏的版本要旧于此游戏的最新版本，而由于某种原因，你没有办法入手最新的汉化版本。并且由于汉化文本是内嵌在游戏中的，没有办法利用mtool来提取出汉化文本，并应用在新版游戏上。
@@ -8,7 +10,8 @@
 
 ![trs_extractor0.png](trs_extractor0.png)
 
-#原理及方法
+## 原理及方法
+
 首先打开游戏的data文件夹，我们会看到这几类文件
 
 ![trs_extractor1.png](trs_extractor1.png)
